# multiverse

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: algo_result_submission.yml  bug_report.yml  dataset_request.yml
.github/workflows/: build_leaderboard.yml  ci.yml  publish_pypi.yml  validate_results.yml
classification/: _timesnet.py
classifiers/: __init__.py
docs/: classifiers.md  datasets.md  evaluation.md  index.md  leaderboard.md  licences.md  loading.md  repo_setup.md  results.md
examples/: aeon_quickstart.py  datasets.ipynb
experiments/: run_benchmark.py  run_single_dataset.py
leaderboards/: README.md  build_leaderboard.py  leaderboard.md
multiverse/classification/: _timesnet.py
multiverse/examples/: aeon_quickstart.py
multiverse/experiments/: run_benchmark.py  run_eeg_bakeoff.py  run_single_dataset.py
multiverse_registry/: README.md  mtsc_registry.csv
results/: README.md  schema.md
results/eeg/: accuracy_mean.csv  balacc_mean.csv
results/multiverse/: accuracy_mean.csv
results/submitted/example_algo/multiverse-v1.0.0/: metrics.csv  run-metadata.json
src/multiverse/: __init__.py
src/multiverse/datasets/: __init__.py  _download.py  _load.py  _registry.py  mtsc_registry.csv
src/multiverse/utils/: _hash.py
