[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiverse-archive"
version = "0.1.0"
description = "Multiverse Archive loaders and utilities for MTSC benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "requests>=2.31",
  "tqdm>=4.66",
  "aeon>=1.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
multiverse = ["datasets/mtsc_registry.csv"]

[project.urls]
Homepage = "https://github.com/<ORG>/<REPO>"
