[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiverse"
authors = [
    {name = "aeon developers", email = "contact@aeon-toolkit.org"},
]
maintainers = [
    {name = "aeon developers", email = "contact@aeon-toolkit.org"},
]
version = "0.1.0"
description = "Multiverse Archive loaders and utilities for MTSC benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "requests>=2.31",
  "tqdm>=4.66",
  "aeon>=1.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
multiverse = ["datasets/mtsc_registry.csv"]

[project.urls]
Homepage = "https://github.com/aeon-toolkit/multiverse"
Repository = "https://github.com/aeon-toolkit/multiverse"
Issues = "https://github.com/aeon-toolkit/multiverse/issues"

[project.license]
file = "LICENSE"
