[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiverse"
authors = [
    {name = "aeon developers", email = "contact@aeon-toolkit.org"},
]
maintainers = [
    {name = "aeon developers", email = "contact@aeon-toolkit.org"},
]
version = "0.0.1"
description = "Multiverse Archive loaders and utilities for MTSC benchmarks."
readme = "README.md"
keywords = [
    "aeon-toolkit",
    "data-science",
    "machine-learning",
    "data-mining",
    "time-series",
    "scikit-learn",
    "multivariate-time-series-classification",
    "time-series-clustering",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "requests>=2.31",
  "tqdm>=4.66",
  "aeon>=1.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
multiverse = ["datasets/mtsc_registry.csv"]

[project.urls]
Homepage = "https://github.com/aeon-toolkit/multiverse"
Repository = "https://github.com/aeon-toolkit/multiverse"
Issues = "https://github.com/aeon-toolkit/multiverse/issues"
